--- a/functions/index.html
+++ b/functions/index.html
@@ -5,14 +5,14 @@
   <title>TS App</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
+  <meta name="description" content="A place for developers to share ideas"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.0.0/webcomponents-loader.js"></script>
-  <script src="https://unpkg.com/@ionic/core@latest/dist/ionic.js"></script>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <counters-list></counters-list>
+  <home-page></home-page>
+  <script>/*SSR*/</script>
   <script src="bundle.js"></script>
 </body>
 
