--- a/functions/index.html
+++ b/functions/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="A place for developers to share ideas"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="styles.css">
+  <script src="https://unpkg.com/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 </head>
 
 <body>
